--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 :root {
     --dark-bg: #111111;
     --dark-bg-secondary: #1c1c1c;
@@ -1809,14 +1808,13 @@
   
   .gallery-main-image {
     flex-grow: 1;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
     overflow-y: auto;
+    text-align: center;
   }
   .gallery-main-image img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
+    display: inline-block;
   }
   
   .gallery-nav-btn {
@@ -2090,5 +2088,3 @@
       .main-content { margin-left: 0; width: 100%; }
       .app-header { left: 0; width: 100%; padding: 15px; }
   }
-  
-  
