--- a/index.css
+++ b/index.css
@@ -1810,6 +1810,7 @@
     flex-grow: 1;
     overflow-y: auto;
     text-align: center;
+    min-height: 0;
   }
   .gallery-main-image img {
     max-width: 100%;
