--- a/works.css
+++ b/works.css
@@ -460,6 +460,7 @@ html, body {
   flex-grow: 1;
   overflow-y: auto;
   text-align: center;
+  min-height: 0;
 }
 .gallery-main-image img {
   max-width: 100%;
